第6章まで済

--- a/TestDrivenDev/TestDrivenDev.csproj
+++ b/TestDrivenDev/TestDrivenDev.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="Dollar.cs" />
     <Compile Include="Frunc.cs" />
+    <Compile Include="Money.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
