--- a/TestDrivenDev/TestDrivenDev.csproj
+++ b/TestDrivenDev/TestDrivenDev.csproj
@@ -39,7 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Dollar.cs" />
-    <Compile Include="Frunc.cs" />
+    <Compile Include="Franc.cs" />
     <Compile Include="Money.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
