--- a/TestDrivenDev/TestDrivenDev.csproj
+++ b/TestDrivenDev/TestDrivenDev.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Bank.cs" />
     <Compile Include="IExpression.cs" />
     <Compile Include="Money.cs" />
+    <Compile Include="Pair.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sum.cs" />
